--- a/index.html
+++ b/index.html
@@ -1,58 +1,92 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css.css">
+    <style media="screen">
+      .slide > ul {
+        display: flex;
+        list-style: none;
+      }
+    </style>
     <title>크림히어로즈</title>
   </head>
   <body>
-    <script>
-      $(document).ready(function(){
-      $('.slider').slider();});
-    </script>
     <nav class="fixed-top">
       <div class="wrap nav-wrap">
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
           <img src="img/logo_BW.png" alt="logo">
         </a>
         <ul>
           <li><a href="index.html">홈으로</a></li>
-          <li><a href="intro.html">고양이소개</a></li>
-          <li><a href="service.html">굿즈</a></li>
+          <div class="dropdown">
+            <li><button class="dropdown-button">고양이소개</button></li>
+            <div class="dropdown-content">
+              <a href="intro_didi.html">디디</a>
+              <a href="intro_titi.html">티티</a>
+              <a href="intro_coco.html">코코</a>
+              <a href="intro_momo.html">모모</a>
+              <a href="intro_chuchu.html">츄츄</a>
+              <a href="intro_lulu.html">루루</a>
+              <a href="intro_lala.html">라라</a>
+            </div>
+          </div>
+          <li><a href="goods.html">링크</a></li>
         </ul>
       </div>
     </nav>
 
-    <div class="slider">
-   <ul class="slides">
-     <li>
-       <img src="img/back.png">
-       <div class="caption center-align">
-         <h3>This is our big Tagline!</h3>
-         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-       </div>
-     </li>
-     <li>
-       <img src="img/back2.png">
-       <div class="caption left-align">
-         <h3>Left Aligned Caption</h3>
-         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-       </div>
-     </li>
-     <li>
-       <img src="img/back3.png">
-       <div class="caption right-align">
-         <h3>Right Aligned Caption</h3>
-         <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-       </div>
-     </li>
-   </ul>
- </div>
+    <div class="back">
+      <div class="wrap">
+        <div class="slide">
+          <ul>
+            <li><img src="img/back.png" width="1080" height="900"></li>
+            <li><img src="img/back2.png" width="1080"height="900"></li>
+            <li><img src="img/back3.png"width="1080"height="900"></li>
+            <li><img src="img/back4.png"width="1080"height="900"></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 
     <footer class="fixed-bottom">
       <div class="wrap">
         Cats rule the world.
       </div>
     </footer>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript">
+      var img = 0;
+
+      var repeat = startInterval();
+
+      function startInterval() {
+         var repeat = setInterval(function(){
+            if(img == 4) img = 0;
+            slide(img);
+            img++;
+          }, 2000);
+
+         return repeat;
+      }
+      function slide(no) {
+        img = no;
+        $(".slide ul").stop(true, true).animate({
+          marginLeft: (img) * -1080 + "px"
+        }, 500);
+      }
+      $('button').click(function(){
+        if($(this).html() == "stop") {
+          clearInterval(repeat);
+        } else if ($(this).html() == "start") {
+          repeat = startInterval();
+        } else { // 1, 2, 3, 4
+          slide(parseInt($(this).html()) - 1);
+        }
+      });
+    </script>
   </body>
 </html>
